Changes in Version 0.8:
  - The log determinant is now computer better to be able to include fit measures at higher model complexities
  - The 'return_improper' argument in runmodel( ) now returns improper estimates without trying different starting values
  - Fixed a bug in meta_varcov when using individual estimates of the sampling variation

Changes in version 0.7.6:
  - Model estimations that used improper estimation (pseudoinverse of variance-covariance matrix) now return with an error unless return_improper = TRUE in runmodel()
  - Equality-free MIs are now also computed when all edges are included

Changes in version 0.7.5:
  - Fixed a bug with nu_zeta being constrained in multigroup LGC models.
  - factorscores now supports multi group models

Changes in version 0.7.3:
  - Added the 'covariates_as' argument to latentgrowth() to model covariates with regressions (now default) or covariances

Changes in version 0.7.2:
  o Fixed a bug with removing diagonal elements of sigma_epsilon with single indicators
  o Fixed another bug with models with only one free indicator
  o Added the partialprune function for partially pruning multi-group models


Changes in version 0.7.1:
  o Fixed a bug for Solaris

Changes in version 0.7:
  o Major changes
    o Major restructuring of underlying core code. Most vital functions have been translated to C++, leading to a large speedup!
    o Added C++ based optimizers cpp_L-BFGS-B, cpp_CG, cpp_SANN, and cpp_Nelder. These are faster but slightly less stable than nlminb (now the default optimizer).
    o Verbose now defaults to FALSE everywhere. This can be set with the setverbose function for a model
    o Added meta-analysis model for varcov family (meta_varcov)
    o The ml_tsdlvm1 function now allows for multi-kevek tsdlvm1 models (dlvm1 models) to be specified using syntax familiar to those using mlVAR and graphicalVAR
  o Minor changes
    o Numerous small bugfixes and improvements (e.g., better starting values)