@@ -1,23 +1,22 @@
 Package: psychonetrics
 Type: Package
 Title: Structural Equation Modeling and Confirmatory Network Analysis
-Version: 0.8
+Version: 0.8.1
 Author: Sacha Epskamp
 Maintainer: Sacha Epskamp <mail@sachaepskamp.com>
 Description: Multi-group (dynamical) structural equation models in combination with confirmatory network models from cross-sectional, time-series and panel data <doi:10.31234/osf.io/8ha93>. Allows for confirmatory testing and fit as well as exploratory model search.
 License: GPL-2
 LinkingTo: Rcpp (>= 0.11.3), RcppArmadillo, pbv, roptim
 Depends: R (>= 3.5)
-Imports: methods, qgraph, numDeriv, dplyr, abind, matrixcalc, Matrix,
-        lavaan, corpcor, ucminf, glasso, mgcv, optimx, mvtnorm, VCA,
-        pbapply, parallel, magrittr, IsingSampler, ggplot2, tidyr,
-        psych, GA, combinat
-Suggests: psychTools, semPlot, graphicalVAR, metaSEM
+Imports: methods, qgraph, numDeriv, dplyr, abind, Matrix, lavaan,
+        corpcor, glasso, mgcv, optimx, VCA, pbapply, parallel,
+        magrittr, IsingSampler, tidyr, psych, GA, combinat
+Suggests: psychTools, semPlot, graphicalVAR, metaSEM, mvtnorm, ggplot2
 ByteCompile: true
 URL: http://psychonetrics.org/
 BugReports: https://github.com/SachaEpskamp/psychonetrics/issues
 StagedInstall: true
 NeedsCompilation: yes
-Packaged: 2020-10-26 20:37:13 UTC; Sacha
+Packaged: 2021-01-28 20:06:32 UTC; sacha
 Repository: CRAN
-Date/Publication: 2020-10-26 21:50:03 UTC
+Date/Publication: 2021-01-28 21:20:03 UTC
