@@ -1,11 +1,11 @@
-275786b39a0a60fb53a754162effbf61 *DESCRIPTION
-03b0b2f516bf10321fb6e307ecf5e717 *NAMESPACE
-37bbc5b1907ea012be6d776e886ba242 *NEWS
+7648854f7dd0af7ced5f153c2e54b2ca *DESCRIPTION
+c817e4d56681464199bdfff4bbf05245 *NAMESPACE
+052c3c3d04978740f0f931689807044b *NEWS
 8bdeac2962f8aeec170f16ec77701664 *R/00_codeOrganization.R
 39edb48d7703de9a0e4b8b66485cd068 *R/00_steps_to_implement_distribution.R
 23cbf9e2c44d1fc02a92c00e7e0d9d9d *R/00_steps_to_implement_estimator.R
 def3d6ed2f7329197b74b77101dd0c40 *R/00_steps_to_implement_model.R
-c1c90478801fcc794a3e9228a2a49181 *R/01_classes.R
+7bad67c4c022d9036ba683da0f13fe77 *R/01_classes.R
 77350e0faa463456d34d05581c666f12 *R/02_algebrahelpers_Solve.R
 b844ce1ba6d1ef0c37b67bef174f3092 *R/02_algebrahelpers_blockToeplitz.R
 00bd47c74aeebce1344a07dcc76f0a3e *R/02_algebrahelpers_checkJacobian.R
@@ -16,7 +16,7 @@ cfdd60d329054a552db308219ad75231 *R/02_algebrahelpers_expectedmodel.R
 8bf71d63af6252065240a9eb1747ec94 *R/02_algebrahelpers_matrixexponent.R
 88e98aa77f7d8791c7b063cc46b8cf23 *R/02_algebrahelpers_modelMatrix.R
 2bf3b1caa144406ec2ead06f1b976955 *R/02_algebrahelpers_quantiletransform.R
-678afa0102372a8f05fc3691e8d0b35d *R/02_algebrahelpers_spectralshift.R
+4213511f703763eb7d9c8c8c9343a36c *R/02_algebrahelpers_spectralshift.R
 728cd878d39fdc07e3b54e54133e10d9 *R/02_algebrahelpers_trysolve.R
 c19ba19fd9326bf6f3c927b99c1a9e93 *R/02_algebrahelpers_vectorize.R
 8c3c5752912ac72529b64e33b550402c *R/02_algebrahelpers_vectorizeMatrices.R
@@ -40,16 +40,16 @@ e0e7e2238950c9b53707d5c651a3af51 *R/03_modelformation_matrixSetup_cholesky.R
 e3c2f217f2f1bce5858ac90a1ff2b4b1 *R/03_modelformation_matrixSetup_delta.R
 a17ab062c2b8b12e7ea77affbb69a437 *R/03_modelformation_matrixSetup_isingomega.R
 45973e36576fdc47852b268ed0ec7aad *R/03_modelformation_matrixSetup_kappa.R
-dd39f221fb3d232dbd335177459aab2e *R/03_modelformation_matrixSetup_lambda.R
+65a00168af57bf579d80f7f88a055a65 *R/03_modelformation_matrixSetup_lambda.R
 748b112642cb34515f2d172150283e89 *R/03_modelformation_matrixSetup_mu.R
 004bdb6a6453f8a7ce9a6fc332c2ab25 *R/03_modelformation_matrixSetup_omega.R
 63e9862df626721cf6d7ed6ea82ac689 *R/03_modelformation_matrixSetup_rho.R
-65fb56449604e22b57abe2530a4f5051 *R/03_modelformation_matrixSetup_sigma.R
+22e1f583d894033d075ae30e3968860e *R/03_modelformation_matrixSetup_sigma.R
 6fb0e75ee3b28475b6e624190dba0aaf *R/03_modelformation_matrixSetup_tau.R
 f5c38eb34f6b265b554e68358436d936 *R/03_modelformation_missingpatterns.R
 1260b1a6503eb5474a5b61e3f3e8aedb *R/03_modelformation_missingpatterns_covs.R
 6c592e9984a8c9ad9c34434291b862df *R/03_modelformation_samplestats.R
-dff0db88a66ec17f3ece2e1bc8be97a1 *R/03_modelformation_samplestats_norawts.R
+9c776d11adfd25ad196c245ddf0cc10c *R/03_modelformation_samplestats_norawts.R
 7c297250ded8c8d710c926d354a37f3a *R/03_modelformation_samplestats_rawts.R
 c83a511f63d8ebcf9ea167fb5e7dae84 *R/03_modelformation_sparseordense.R
 dd9ea5a3383d18de3ba20a6dc306a15d *R/03_modelformation_startvaluesandbounds.R
@@ -61,12 +61,12 @@ fe38c54cab6558ada230e2f6c5071617 *R/04_generalfit_FisherInformation.R
 710751a0cd59ec0af9f90ba587815a27 *R/04_generalfit_VCOV.R
 9634672646ac4dd2a0d4fd6db8a6a884 *R/04_generalfit_impliedModel.R
 1a87ce5f2a9f24113348c42dda26a31d *R/04_generalfit_loglikelihood_Ising.R
-34f6af430ef187737ccec55c1795a66a *R/04_generalfit_loglikelihood_gauss.R
+7436a469554f14768c016218999a4dce *R/04_generalfit_loglikelihood_gauss.R
 1356b270b997096f9a90f1da6de62d3d *R/04_generalfit_prepareModel.R
 b467d9f1f85eca31ec2fca185e35f991 *R/04_modelformation_matrixSetup_flexcov.R
 f491dcecda35a5acc14cca22c7dc64a9 *R/05_MLestimator_expected_hessian_Gauss.R
 5e188daefabc21610aba1c075315d114 *R/05_MLestimator_expected_hessian_Ising.R
-46c815b0a58890e75aa95fac453ca0ed *R/05_MLestimator_fit_Gauss.R
+03b90f7e6b00db2b2d55485d57db925c *R/05_MLestimator_fit_Gauss.R
 f10e19c53f031696a8700ea90f204fe4 *R/05_MLestimator_fit_Ising.R
 43c665adde9db89d852f6011b48a8eaa *R/05_MLestimator_fitfunction.R
 1ecf74ef40400fed1be81416cc6f59ce *R/05_MLestimator_gradient_Gauss.R
@@ -82,16 +82,16 @@ b7bea95e82bba955e9a1b02839ae340e *R/07_FIMLestimator_gradient_Gauss.R
 086d56d0a4f91317dab41ffd0ace557b *R/08_outputHelpers_goodNum.R
 16ddb8ce59e95cf9c0fab61a32dddc93 *R/08_outputHelpers_logo.R
 48f5ff76bb8835f1e47681e5b24839a4 *R/09_modelmodification_clearpars.R
-0e6f9e54623021ae2e0f80b337de7dc5 *R/09_modelmodifivation_emergencystart.R
+6354a6796f0ce86e20d3e8ed099596f3 *R/09_modelmodifivation_emergencystart.R
 fd9ce153f6a290b6a4d44bfbc71fa7f7 *R/14_varcov_derivatives.R
-03f4246d86d06a4e8c7af195995ad522 *R/14_varcov_implied.R
+b333edec71cea203b74615456ed72e4d *R/14_varcov_implied.R
 66bab41fac5faf28782db82d10f2c27d *R/14_varcov_prepare.R
 18bdd595afe9224313a5d741f54f09f6 *R/15_lvm_derivatives.R
-ec9d3f3b758ceec07e36bf74b262ccaa *R/15_lvm_identify.R
+179bb42e56917f70c1a99f83cc6055d9 *R/15_lvm_identify.R
 65a9172614ac757ab8f481970d26c914 *R/15_lvm_implied.R
 8606ff163e6bfa052a4c07900634bfd2 *R/15_lvm_prepare.R
-203fd2425b99a30a53ac1bd8905954f7 *R/16_var1_derivatives.R
-0067ec03c482abaef8a74a9da5653ef2 *R/16_var1_implied.R
+21c91ff10093383d4b43e340f575f18a *R/16_var1_derivatives.R
+516dde4e3f99cfc2ab170cfa6c8bf846 *R/16_var1_implied.R
 419041c106d0e2e3c6d85cce41acc2c5 *R/16_var1_prepare.R
 86f1bbb53fdbb6966adb13a6c529866c *R/18_dlvm1_derivatives.R
 781a4e33f6e80cb01f5d5a5fecd1ce42 *R/18_dlvm1_identify.R
@@ -113,7 +113,7 @@ aecd8f8852ba895cdfefea5af1f35801 *R/21_Ising_prepare.R
 4706f84b7e82671a2de91d050006d26a *R/22_ml_lvm_identify.R
 6da6c1c59ae33c82adfc79d45c59b50e *R/22_ml_lvm_implied.R
 2b0a07b0563f6d116db35d058aedbd1a *R/22_ml_lvm_prepare.R
-6ff8486b1428dbff644a37f2a72340a9 *R/RcppExports.R
+4720bbf5e543375ae35679c3e1244e4f *R/RcppExports.R
 54c3b09a1f89e664da5fb8cb892bcd1c *R/a_models_Ising.R
 49d501270df8e5632fcc273d712c2da5 *R/a_models_bifactor.R
 43fdd4d275615c9d14638e09d0183444 *R/a_models_cholesky.R
@@ -123,12 +123,12 @@ aecd8f8852ba895cdfefea5af1f35801 *R/21_Ising_prepare.R
 f68f1febdf4aae1f6570bc08fb2030f4 *R/a_models_ggm.R
 16eadf2be07d2db28ed256cf0c044b93 *R/a_models_gvar.R
 24c76d573b5193ae775175bc52b98758 *R/a_models_joingroups.R
-7f2e85441ac6b7e72c18d9b0457ed2b9 *R/a_models_latentgrowth.R
+75134da85c3aba6577333e58fee76454 *R/a_models_latentgrowth.R
 dd27020d2890bdc7cdc9c04beaab93fc *R/a_models_lnm.R
 2c5b38f7fe589de4728deaa686ceab7f *R/a_models_lrnm.R
-5cc1bbdf23ee49ba7568f0d8cee8304c *R/a_models_lvm.R
+c1ed789193c602eba39b59b1fec83f79 *R/a_models_lvm.R
 01e6c66a3e75ba11e65c0b49e5ae06b3 *R/a_models_meta_ggm.R
-b1104a57fb8c25c1cf88c2705cab38ba *R/a_models_meta_varcov.R
+b4476062dc9c70b86578138bd8ccd6db *R/a_models_meta_varcov.R
 4020e1cf6de9ec98a7d6b50432cb8c40 *R/a_models_ml_lnm.R
 cd4dceec4048e947b5e0e67e65df5643 *R/a_models_ml_lrnm.R
 4ca997f2d54fc2963c01360972475b10 *R/a_models_ml_lvm.R
@@ -143,24 +143,26 @@ ca8329028cb03ff4fd9047ac8207c901 *R/a_models_rnm.R
 8815e2a92c0a0bf319c9acf82dae8239 *R/a_models_tslvgvar.R
 c89df4f227c5cc0d2d1dad1f93e77cb7 *R/a_models_var1.R
 64b44d9e304466889eb0b696a35678a4 *R/a_models_varcov.R
-2cb071264dd31ab671496d72d4ce23c8 *R/b_modelexpansions_addMIs.R
+9d67fbf887329e0a077c348b8dcf7471 *R/b_modelexpansions_addMIs.R
 52ffbbdf41210079a2f5b8b878323f13 *R/b_modelexpansions_addSEs.R
 8aa89cc6675eb6411acd3a3ca118df05 *R/b_modelexpansions_addfit.R
 12647fb982101617f4e3657590916e99 *R/b_modelexpansions_identify.R
 0c41aa1fbd2907d433e0c2c1e6894b97 *R/b_modelexpansions_updateModel.R
-629bc488000f43e014ac268acbad91e3 *R/c_runmodel.R
+0a09c2f6b2d66d267d62a17b80634cd6 *R/c_runmodel.R
 3fada690090efdbf5b1ae942b8b3a62d *R/d_stepup.R
 bc08b3b8435002229cb19225bd479cc7 *R/e_modelmodifications_fixpar.R
 5bf479c92504c034328fdf442e15aa5a *R/e_modelmodifications_freepar.R
 6693471a2a1db7784291020c1916976b *R/e_modelmodifications_groupequal.R
 257b7ae6e2df8b45d8cfeae6f96f8834 *R/e_modelmodifications_groupfree.R
 84960faf68a8124e4297698635f20b7b *R/e_modelmodifications_intersectionmodel.R
-f5350fd6898df65318673f4dec35d33b *R/e_modelmodifications_partialprune.R
+03be07e3079483266321cf1696152241 *R/e_modelmodifications_partialprune.R
 b30f17f7a1cda3722509119377bcf460 *R/e_modelmodifications_prune.R
 a3d6b893616e100158e0d718cb6cf732 *R/e_modelmodifications_setequal.R
 c56d93c09465d01ec23cf46c510bedb0 *R/e_modelmodifications_unionmodel.R
 62ed640c41a1f5503ef95c68f3d5afd7 *R/f_conveneince_changedata.R
-d2cae196e2311ae84a47ac033f0ef3eb *R/f_conveneince_generate.R
+534e858be1de1a8ab5390755d9e14cde *R/f_conveneince_fake_optimr.R
+7c4d4da8c0ceb5cac857717c18047b7f *R/f_conveneince_fakeoptimr.R
+607228d6b0e553786119f79adc8b566e *R/f_conveneince_generate.R
 aab21d443bc2a9301c6277a500ccc083 *R/f_conveneince_setEstimator.R
 72351dd90bdb9ce39c600a064d972f60 *R/f_conveneince_setoptimizer.R
 44edcc0843ca710ee92e47434b61cd72 *R/f_conveneince_setverbose.R
@@ -169,19 +171,19 @@ ff48511aed9eab4bdd4d9ae2e30fab82 *R/f_convenience_MIs.R
 c6563cf7c16b3b76928285cefa72eff3 *R/f_convenience_bootstrap.R
 82de9fb32a6b887f7079ffc96cdb7cba *R/f_convenience_bootstrap_SEs.R
 462c89b611f78ec25f68536ec04e272b *R/f_convenience_covML.R
-a4eeb170f5d304cb3fbd8f3ae5e2e634 *R/f_convenience_ergodicity.R
-933813dda0c66bed65913c6c148d3fe6 *R/f_convenience_factorscores.R
+b0245e2f5c4970ce3d7fac775c29477d *R/f_convenience_ergodicity.R
+26228be91a3363c659d85a7d314d8eb3 *R/f_convenience_factorscores.R
 ddc8603b336ce2c99ed36937ec0fdaa3 *R/f_convenience_fit.R
-c5e7033472e2a4f1530470ecaeab4cbf *R/f_convenience_getmatrix.R
+da3b121f941ff121d98972713a303cfb *R/f_convenience_getmatrix.R
 f3e68744e25af05deccc47f6efba2da4 *R/f_convenience_modelCompare.R
 9a37608c7b7a14fdfc7736c105ad22e2 *R/f_convenience_parameters.R
 c4dc2f15862e337e24c4f2a05a83ddc5 *R/f_convenience_printMethod.R
 f6cebf8da969167611240c80872c2723 *R/f_convenience_residuals.R
 19f9a5d930f3c9d9cb8488eeff243931 *R/f_convenience_simplestructure.R
 c203c68dd6e3b9e9b9ccf2b906469c8d *R/g_simulations_replicator.R
-db2f1c063e7dce4660ba368176134ec1 *R/h_modelsearch.R
-090e8f0c82db5849157d34aba8fb7988 *build/partial.rdb
-258e37609d9df24109d79c090b2482f3 *data/Jonas.RData
+68de97f271ef9f8c7e4bf896b8bfca5a *R/h_modelsearch.R
+891048e29122fbf0abd1962c0cfb6271 *build/partial.rdb
+dbd2c753a6f43e3e86725b294be9ec3f *data/Jonas.RData
 8362081c9fd0343b1edf5ca127654230 *data/StarWars.RData
 6d08ce8bca90114386ac1a810a4b6796 *man/Ising.Rd
 f1a101d31b599431da9c2d9b60791435 *man/Jonas.Rd
@@ -197,15 +199,15 @@ e9398f9f94ede9f84faf53903de820ec *man/covML.Rd
 5eb41565ce24899f3ce4d8413e28ef8e *man/dlvm1_family.Rd
 f38ee3b05ebb128ace1fc374db2799a2 *man/emergencystart.Rd
 f2258bec0a942d2023a42b2fbde14f57 *man/esa.Rd
-5ce0edf536d6ce707cc350d75376ebbe *man/factorscores.Rd
+234e243d3eb45f753fce24ad299a5912 *man/factorscores.Rd
 092ced2d54bbfd73e48db77737bcaa05 *man/fit.Rd
 72e2a3a571657dbb8a19b3c1636a6fb4 *man/fixpar_freepar.Rd
 5f4f48d307e04e793a468d184fc00ea7 *man/generate.Rd
 5c9db3ef8a1bb5fa6c6037ef98119ffc *man/getVCOV.Rd
 6ee1ede22db20552f32cc3f87f2cb25a *man/getmatrix.Rd
 fecbe0769bffa6c1a068dc77681b1208 *man/groupequal_groupfree.Rd
-1a570754965c2034fc1846ec33354ca8 *man/latentgrowth.Rd
-bcaf47e14a5e50a2b8adc56aa3764ebc *man/lvm_family.Rd
+41de56462a174ca34ebaa3305f755a45 *man/latentgrowth.Rd
+2644a514b69c7d6b0743d2e238b38cb5 *man/lvm_family.Rd
 917922913146fefba66d7328ed550099 *man/meta_varcov.Rd
 fd1d1b826d3d2fdc0d22f6b13c4f7ea3 *man/ml_lvm.Rd
 e3a799683f98e22df74d0b05591f57e5 *man/ml_tsdlvm1.Rd
@@ -213,11 +215,11 @@ dd090da98ed20c997dc8c36760953fba *man/modelsearch.Rd
 c3ba1759bb8e86addad16f9b638b8a62 *man/modelupdate.Rd
 96618185e712e977edf16eceaa719b26 *man/parameters.Rd
 cc9e292378f985eb406cb2d3cf6c2a60 *man/parequal.Rd
-44ab0c7bffc5c479fe15f35343ebabd5 *man/partialprune.Rd
+8e9b4e1d70c7c9f47f7fad4d2078322d *man/partialprune.Rd
 7986347faf4e34ae84fc50b543465d67 *man/prune.Rd
 69c6199ec2bd639c8254ea42d6904f40 *man/psychonetrics-class.Rd
 45fccd19544771d9b8f6f8f7e9873c98 *man/psychonetrics-package.Rd
-f1dd3270c9ecc887bf860507043c5ae7 *man/runmodel.Rd
+bfda238aa212624d1491dc2d2ed5653b *man/runmodel.Rd
 301c4766137e2c15a7694d935a35ecc2 *man/setverbose.Rd
 4239d78bb42645c556fb9478b54fdf2a *man/simplestructure.Rd
 466ff281f3c634883a7d46dc10fa9cb5 *man/stepup.Rd
