@@ -29,7 +29,7 @@ export(meta_varcov)
 # Ergodic:
 export(esa)
 export(esa_manual)
-import(ggplot2)
+# import(ggplot2)
 # import(tidyr)
 importFrom(tidyr, gather, pivot_wider)
 
@@ -143,13 +143,12 @@ exportMethods("show", "resid", "residuals")
 # importFrom(lavaan, lavCor, lavInspect)
 import(dplyr)
 importFrom(abind, abind)
-importFrom(matrixcalc,duplication.matrix,elimination.matrix,commutation.matrix)
+#importFrom(matrixcalc,duplication.matrix,elimination.matrix,commutation.matrix)
 import(Matrix)
 importFrom(numDeriv, grad, jacobian, hessian)
 importFrom(lavaan, lav_matrix_commutation)
 importFrom(corpcor, pseudoinverse)
 #importFrom(optimx, optimx)
-import(ucminf)
 import(glasso)
 importFrom(qgraph,qgraph,wi2net)
 importFrom("graphics", "abline", "par")
@@ -160,7 +159,7 @@ importFrom("graphics", "abline", "par")
 
 importFrom("mgcv","uniquecombs")
 importFrom("optimx","optimr")
-importFrom("mvtnorm","rmvnorm")
+#importFrom("mvtnorm","rmvnorm")
 importFrom("VCA","MPinv")
 importFrom("pbapply","pblapply")
 import(parallel)
